--- a/jenkins_demo/jenkinsfile
+++ b/jenkins_demo/jenkinsfile
@@ -2,26 +2,26 @@ pipeline {
     agent any
 
     parameters {
-        string(name: 'build', description: 'it is for building application', defaultValue: 'Build')
-        string(name: 'test', description: 'it is for Testing application', defaultValue: 'Test')
-        string(name: 'deploy', description: 'it is for deploying application', defaultValue: 'Deploy')
+        string(name: 'Build', description: 'it is for building application', defaultValue: 'Build')
+        string(name: 'Test', description: 'it is for Testing application', defaultValue: 'Test')
+        string(name: 'Deploy', description: 'it is for deploying application', defaultValue: 'Deploy')
     }
 
     stages {
-        stage('Build') {
+        stage(${ params.Build }) {
             steps {
-                sh 'echo hello ${params.build}'
+                sh "echo hello ${params.Build}"
             }
-        }
-        stage('Test') {
-            steps {
-                sh 'echo hello ${params.test}'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                sh 'echo hello ${params.deploy}'
-            }
-        }
     }
+        stage(${ params.Test }) {
+            steps {
+                sh "echo hello ${params.Test}"
+            }
+}
+        stage(${ params.Deploy }) {
+            steps {
+                sh "echo hello ${params.Deploy}"
+            }
+        }
+}
 }
