--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,9 @@ pipeline {
         stage('checkout') {
             steps {
                 /* groovylint-disable-next-line GStringExpressionWithinString */
+                echo 'this is for branch checkout, the data should be come from new branch'
                 git branch: ${ params.Branch }, url: 'https://github.com/saurabh-kumar-coder/jenkins.git'
-                sh 'echo("checkout")'
+                sh 'echo(checkout)'
             }
         }
         stage('Build') {
