--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 /* groovylint-disable-next-line GStringExpressionWithinString */
                 echo 'this is for branch checkout, the data should be come from new branch'
                 git branch: "${ params.Branch }", url: 'https://github.com/saurabh-kumar-coder/jenkins.git'
-                sh "echo(checkout) ${ params.Branch }"
+                echo('checkout')
             }
         }
         stage('Build') {
