--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,11 @@ pipeline {
                 echo('checkout')
             }
         }
+        stage('mvn install') {
+            steps {
+                sh 'mvn install'
+            }
+        }
         stage('Build') {
             steps {
                 sh "echo hello ${params.Build}"
