--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         string(name: 'Build', description: 'it is for building application', defaultValue: 'Building')
         string(name: 'Test', description: 'it is for Testing application', defaultValue: 'Testing')
         string(name: 'Deploy', description: 'it is for deploying application', defaultValue: 'Deploying')
-        string(name: 'Branch', description: 'branch name', defaultValue: 'main')
+        string(name: 'Branch', description: 'branch name', defaultValue: 'f-1000-checkout_code')
     }
     stages {
         stage('checkout') {
@@ -18,6 +18,7 @@ pipeline {
         stage('mvn install') {
             steps {
                 sh 'mvn install'
+                echo 'this is for mvn install'
             }
         }
         stage('Build') {
